# k-digital_alpaedu_pythonStudy

./: 3월_21일 특강마인드맵.mm  AI_파이썬_정리.mm  README.md  code_sample.txt  faster_whisper_youtube_파파고 돌렸어요_.ipynb  imdb_keras.py  naver_keras.py  text.ipynb  ttest.py  tw_test.json  누구나AI 딥러닝.mm  딥러닝 9기 1차실습과제 정리.mm  유데미 판다스강좌.mm  음성처리_딥러닝.mm  파이썬_내장.txt  파이썬및데이터분석기초10일차.txt  파이썬및데이터분석기초11일차.txt  파이썬및데이터분석기초12일차.txt  파이썬및데이터분석기초1일차.txt  파이썬및데이터분석기초2일차.txt  파이썬및데이터분석기초3일차.txt  파이썬및데이터분석기초4일차.txt  파이썬및데이터분석기초5일차.txt  파이썬및데이터분석기초6일차.txt  파이썬및데이터분석기초7일차.txt  파이썬및데이터분석기초8일차.txt  파이썬및데이터분석기초9일차.txt
alpaco9cijlib/: pyproject.toml  setup.py
alpaco9cijlib/alpaco9cijlib.egg-info/: PKG-INFO  SOURCES.txt
alpaco9cijlib/crawl/: google_colab_selenium_installChking.py
csv/: bomtoon_KRtoEN70000.csv  bomtoon_KRtoEN73330.csv  bomtoon_KRtoEN_40000_50000.csv  bomtoon_KRtoEN_50000_60000.csv  bomtoon_final.csv  final_.ipynb  krtoEN_orijin.ipynb
jupy/: bomtoon.ipynb  bomtoon_1조.ipynb  bomtoon_sub.ipynb  bomtoon_sub1.ipynb  commentJSON.txt  textming_jo.ipynb
jupy/.ipynb_checkpoints/: bomtoon-checkpoint.ipynb
langchain/poet/: main.py
packaging_tutorial/src/: pyproject.toml  setup.py
packaging_tutorial/src/example_package_cij/: examplecij.py  min.py
packaging_tutorial/src/example_package_cij.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wikidocs_정리/: tmain.py
과제제출최종정리/음성인식/: 딥러닝9기_실습과제2_조인준.ipynb  딥러닝9기_실습과제2_조인준_00.ipynb
텍스트마이닝_교육원본용/: 텍스트마이닝 조편성.txt
